zeit.nightwatch changes
=======================


1.1.0 (unreleased)
------------------

- Declare namespace package properly


1.0.0 (2021-02-11)
------------------

- Initial release