@@ -21,8 +21,8 @@ setup(
         'lxml',
         'mechanicalsoup',
         'requests',
+        'prometheus_client',
         'pytest',
-        'pytest-prometheus',
         'selenium',
         'setuptools',
     ],
